update: project tags to list

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <h3 class="section-lead" style="color: #fff;"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>After College, What's Next?</h3>
                 <p>I graduated with a degree in <abbr title="Bachelor of Computer Applications">B.C.A.</abbr> in the year 2020. A major question that kept creeping back is <strong>what now, that I am done with college?</strong> I did get placed in a reputed Consulting US firm, but then I didn't know where to go now in terms on learning. I tried exploring Machine Learning and Data Science, but then I found myself in a road block.</p>
                 <br />
-                <p class="bg-primary-color" style="font-weight: bold;">That's when I discovered <strong class="secondary-color"><a href="https://neog.camp/">neoG.Camp</a></strong> in November 2020. I had a few more months to onboard into the firm, so I utilized that time in building and refactoring my skills. <br/><br/>Not only did this initiative make me confident, it also gave me a proper vision and a guide for my future ahead.</p>
+                <p class="bg-primary-color" style="font-weight: bold;">That's when I discovered <strong class="secondary-color"><a href="https://neog.camp/" target="_blank">neoG.Camp</a></strong> in November 2020. I had a few more months to onboard into the firm, so I utilized that time in building and refactoring my skills. <br/><br/>Not only did this initiative make me confident, it also gave me a proper vision and a guide for my future ahead.</p>
             </section>
             <section class="bg-gray about section container container-center">
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>What am I Upto Now?</h3>
@@ -63,6 +63,7 @@
         </main>
 
         <main class="main about-main mobile-screen">
+        <h1 class="main-head secondary-color">ABOUT ME</h1>
             <section class="about section container container-center">  
                 <p>I graduated with a degree in <strong class="primary-color">Bachelor of Computer Applications</strong> from Stella Maris College, Chennai, India in September 2017. </p>
                 <br />
@@ -73,7 +74,7 @@
                 <p>Apart from tech, <strong class="secondary-color">I love singing and reading books.</strong> I am an avid reader, and read almost everyday. My favorite genres are fiction, fantasy, thriller, adventure and mystery. I have also been trained in Classical Carnatic Music for over 12 years.</p>  
                 <hr />
                 
-                <p>I discovered <strong><a href="https://neog.camp/" class="secondary-color">neoG.Camp</a></strong> in May 2020, and have used this program to build and refactor my skills.</p>
+                <p>I discovered <strong><a href="https://neog.camp/" class="secondary-color" target="_blank">neoG.Camp</a></strong> in November 2020, and have used this program to build and refactor my skills.</p>
 
                 <p class="bg-primary-color" style="font-weight: bold;">Not only has this initiative made me confident, it has also given me a proper vision and guide for the future.</p>
             
@@ -87,7 +88,7 @@
             <p>Follow me on social networking sites for more technical content!</p>
             <ul class="social-links inline-list">
                 <li>
-                    <a href="https://github.com/bharati-21" class="link">
+                    <a href="https://github.com/bharati-21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-github"></i>
                         </span>
@@ -96,7 +97,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-linkedin"></i>
                         </span>
@@ -104,7 +105,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dev.to/bharati21" class="link">
+                    <a href="https://dev.to/bharati21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-dev"></i>
                         </span>
@@ -112,31 +113,30 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                    <a href="https://twitter.com/_girlwhocodes" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-twitter"></i>
                         </span>
                         Twitter
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                <!-- <li>
+                    <a href="https://www.instagram.com/bharati_codes/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
-                </li>
-                <li class="inline-list">
-                    <a href="" class="link">
+                </li> -->
+                <!-- <li class="inline-list">
+                    <a href="" class="link" target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
                         Goodreads
                     </a>
-                </li>
+                </li> -->
             </ul>
-
         </footer>
     </body>
 </html>
