--- a/blog-three.html
+++ b/blog-three.html
@@ -71,7 +71,7 @@
             <p>Follow me on social networking sites for more technical content!</p> -->
             <ul class="social-links inline-list">
                 <li>
-                    <a href="https://github.com/bharati-21" class="link">
+                    <a href="https://github.com/bharati-21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-github"></i>
                         </span>
@@ -80,7 +80,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-linkedin"></i>
                         </span>
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dev.to/bharati21" class="link">
+                    <a href="https://dev.to/bharati21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-dev"></i>
                         </span>
@@ -96,29 +96,29 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                    <a href="https://twitter.com/_girlwhocodes" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-twitter"></i>
                         </span>
                         Twitter
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                <!-- <li>
+                    <a href="https://www.instagram.com/bharati_codes/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
-                </li>
-                <li class="inline-list">
-                    <a href="" class="link">
+                </li> -->
+                <!-- <li class="inline-list">
+                    <a href="" class="link" target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
                         Goodreads
                     </a>
-                </li>
+                </li> -->
             </ul>
         </footer>
     </body>
