--- a/blogs.html
+++ b/blogs.html
@@ -118,9 +118,9 @@
         <footer class="footer container bg-dark-gray">
             <div class="footer-head">Thank you for visiting my space!</div>
             <p>Follow me on social networking sites for more technical content!</p>
-            <ul class="social-links inline-list">
+           <ul class="social-links inline-list">
                 <li>
-                    <a href="https://github.com/bharati-21" class="link">
+                    <a href="https://github.com/bharati-21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-github"></i>
                         </span>
@@ -129,7 +129,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-linkedin"></i>
                         </span>
@@ -137,7 +137,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dev.to/bharati21" class="link">
+                    <a href="https://dev.to/bharati21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-dev"></i>
                         </span>
@@ -145,7 +145,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                    <a href="https://twitter.com/_girlwhocodes" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-twitter"></i>
                         </span>
@@ -153,7 +153,7 @@
                     </a>
                 </li>
                 <!-- <li>
-                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                    <a href="https://www.instagram.com/bharati_codes/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
@@ -161,7 +161,7 @@
                     </a>
                 </li> -->
                 <!-- <li class="inline-list">
-                    <a href="" class="link">
+                    <a href="" class="link" target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
