--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                 </div>
             </section>
         </main>
-        <footer class="footer container bg-dark-gray">
+        <footer class="footer container bg-dark-gray" id="footer">
             <div class="footer-head">Thank you for visiting my space!</div>
             <p>Follow me on social networking sites!</p>
             <ul class="social-links inline-list">
                 <li>
-                    <a href="https://github.com/bharati-21" class="link">
+                    <a href="https://github.com/bharati-21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-github"></i>
                         </span>
@@ -135,7 +135,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-linkedin"></i>
                         </span>
@@ -143,7 +143,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dev.to/bharati21" class="link">
+                    <a href="https://dev.to/bharati21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-dev"></i>
                         </span>
@@ -151,7 +151,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                    <a href="https://twitter.com/_girlwhocodes" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-twitter"></i>
                         </span>
@@ -159,7 +159,7 @@
                     </a>
                 </li>
                 <!-- <li>
-                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                    <a href="https://www.instagram.com/bharati_codes/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
@@ -167,7 +167,7 @@
                     </a>
                 </li> -->
                 <!-- <li class="inline-list">
-                    <a href="" class="link">
+                    <a href="" class="link" target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
