--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,20 @@
                 <ol reversed class="project-list">
                     <div class="list-item-container">
                         <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Blogs and Social Media</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 7, 2021</small>
+                        <p class="project-tag">markFifteen</p>
+                        <p class="project-gist">Wrote blogs on CSS and JavaScript to highlight my learnings, and posted them on the portfolio. Added social media links in the portfolio to connect with developers.</p>
+                        <a target="_blank" href="https://bharati-portfolio.netlify.app/blogs.html" class="link link-primary">Blogs</a>
+                        <a target="_blank" href="http://127.0.0.1:5501/index.html#footer" class="link link-secondary">Social Links</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Stock: Profit or Loss?</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 6, 2021</small>
+                        <p class="project-tag">markFourteen</p>
                         <p class="project-gist">Application created using JavaScript that compares the price of stock bought by the user with the current stock price to check if the user gained profit or loss.</p>
                         <a target="_blank" href="https://bharati-stock-profit-loss.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/stock-profit-loss" class="link link-secondary">View Source</a>
@@ -46,6 +57,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Is Your Birth Date A Palindrome?</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 4, 2021</small>
+                        <p class="project-tag">markThirteen</p>
                         <p class="project-gist">Aa application created using JavaScript that checks if the user's birth date is a palindrome. If not, the application displays the nearest palindrome to the birth date.</p>
                         <a target="_blank" href="https://bharati-birthday-palindrome.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/birthday-palindrome" class="link link-secondary">View Source</a>
@@ -55,6 +67,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Play With Triangles</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 1, 2021</small>
+                        <p class="project-tag">markTwelve</p>
                         <p class="project-gist">A fun application created using ReactJs that tests your knowledge of triangles and it's types!</p>
                         <a target="_blank" href="https://bharati-play-with-triangles.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/play-with-triangles" class="link link-secondary">View Source</a>
@@ -64,6 +77,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Is Your Birthday Lucky?</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 29, 2021</small>
+                        <p class="project-tag">markEleven</p>
                         <p class="project-gist">An application created using JavaScript that takes the birthday and lucky number of the user to tell if their birth date is lucky or not!</p>
                         <a target="_blank" href="https://bharati-is-your-birthday-lucky.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/is-your-birthday-lucky" class="link link-secondary">View Source</a>
@@ -73,6 +87,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Cash Register Manager</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 21, 2021</small>
+                        <p class="project-tag">markTen</p>
                         <p class="project-gist">Web App created using JavaScript that allows users to find the number of notes to return to a customer, given the bill and cash amount.</p>
                         <a target="_blank" href="https://cash-register-bharati.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/cash-register" class="link link-secondary">View Source</a>
@@ -82,6 +97,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Book Recommender</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
+                        <p class="project-tag">markNine</p>
                         <p class="project-gist">Web App created using ReactJS that allows user click genres to view Books read and recommended by <em>Bharati Subramanian</em>.</p>
                         <a target="_blank" href="https://bharati-book-recommender.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/book-recommender" class="link link-secondary">View Source</a>
@@ -91,6 +107,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Emoji Interpreter</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
+                        <p class="project-tag">markEight</p>
                         <p class="project-gist">This is a small web app using ReactJS that interprets the emojis entered and clicked by the user.</p>
                         <a target="_blank" href="https://bharati-emoji-interpreter.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/emoji-interpreter" class="link link-secondary">View Source</a>
@@ -100,6 +117,7 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Star Trek's Vulcan Translator</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 03, 2021</small>
+                        <p class="project-tag">markSeven</p>
                         <p class="project-gist">This is a fun and simple translator that converts English to the famous Star Trek's Vulcan language.</p>
                         <a target="_blank" href="https://bharati-vulcan-translator.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/vulcan-translator" class="link link-secondary">View Source</a>
@@ -109,15 +127,40 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Minion's Banana Talk</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 30, 2021</small>
+                        <p class="project-tag">markSix</p>
                         <p class="project-gist">This is a fun, simple and sweet translator that translates English to Minion's Banana language.</p>
                         <a target="_blank" href="https://bharati-banana-talk.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/banana-talk" class="link link-secondary">View Source</a>
                     </div>
+
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Adding Blogs to Portfolio</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 29, 2021</small>
+                        <p class="project-tag">markFive</p>
+                        <p class="project-gist">Posting my Blogs to the portfolio which highlights my learnings and journey in development.</p>
+                        <a target="_blank" href="https://bharati-portfolio.netlify.app/blogs.html" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://dev.to/bharati21" class="link link-secondary">View on Dev</a>
+                    </div>
+
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Portfolio Website</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 29, 2021</small>
+                        <p class="project-tag">markFour</p>
+                        <p class="project-gist">My portfolio website that lists down my skills, learnings, blogs and project work.</p>
+                        <a target="_blank" href="https://bharati-portfolio.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/bharati-portfolio" class="link link-secondary">View Source</a>
+                    </div>
+
                     <div class="list-item-container">
                         <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Do you know me?</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 12, 2021</small>
+                        <p class="project-tag">markOne</p>
                         <p class="project-gist">This is a fun, short quiz to test how well my close friends and family know me!</p>
                         <a target="_blank" href="https://replit.com/@bhaaratii/how-well-do-you-know-me?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/how-well-do-you-know-me" class="link link-secondary">View Source</a>
@@ -127,10 +170,28 @@
                             <li class="list-item"><span style="color: var(--dark-gray);">Are you a Potterhead?</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 12, 2021</small>
+                        <p class="project-tag">markTwo</p>
                         <p class="project-gist">Are you a Potterhead fan? Take this quiz to test how well you know the Harry Potter books.</p>
                         <a target="_blank" href="https://replit.com/@bhaaratii/JS-Quiz?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/JS-Quiz" class="link link-secondary">View Source</a>
                     </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">GitHub + Netlify Integration</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 11, 2021</small>
+                        <p class="project-tag">markThree</p>
+                        <p class="project-gist">First website hosted on GitHub, and separate repositories created for projects along with updated README.</p>
+                        <div style="margin-bottom: 1rem;">
+                            <a target="_blank" href="https://bharati-portfolio-demo.netlify.app/" class="link link-primary">Site Hosted on Netlify</a>
+                            <a target="_blank" href="https://github.com/bharati-21/bharati-portfolio-demo" class="link link-secondary">View Source</a>
+                        </div>
+                        <div>
+                            <a target="_blank" href="https://github.com/bharati-21/JS-Quiz" class="link link-primary">markTwo Quiz Repo</a>
+                            <a target="_blank" href="https://github.com/bharati-21/how-well-do-you-know-me" class="link link-secondary">markOne Quiz Repo</a>
+                        </div>
+                    </div>
+                   
                 </ol>
 
             </section>
@@ -141,7 +202,7 @@
             <p>Follow me on social networking sites for more technical content!</p>
             <ul class="social-links inline-list">
                 <li>
-                    <a href="https://github.com/bharati-21" class="link">
+                    <a href="https://github.com/bharati-21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-github"></i>
                         </span>
@@ -150,7 +211,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-linkedin"></i>
                         </span>
@@ -158,7 +219,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dev.to/bharati21" class="link">
+                    <a href="https://dev.to/bharati21" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-dev"></i>
                         </span>
@@ -166,29 +227,29 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                    <a href="https://twitter.com/_girlwhocodes" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-twitter"></i>
                         </span>
                         Twitter
                     </a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                <!-- <li>
+                    <a href="https://www.instagram.com/bharati_codes/" class="link"  target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
-                </li>
-                <li class="inline-list">
-                    <a href="#" class="link">
+                </li> -->
+                <!-- <li class="inline-list">
+                    <a href="" class="link" target="_blank">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
                         Goodreads
                     </a>
-                </li>
+                </li> -->
             </ul>
         </footer>
     </body>
