update: mark15 social link

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                         <p class="project-tag">markFifteen</p>
                         <p class="project-gist">Wrote blogs on CSS and JavaScript to highlight my learnings, and posted them on the portfolio. Added social media links in the portfolio to connect with developers.</p>
                         <a target="_blank" href="https://bharati-portfolio.netlify.app/blogs.html" class="link link-primary">Blogs</a>
-                        <a target="_blank" href="http://127.0.0.1:5501/index.html#footer" class="link link-secondary">Social Links</a>
+                        <a target="_blank" href="https://bharati-portfolio.netlify.app/index.html#footer" class="link link-secondary">Social Links</a>
                     </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
