--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </h3>
                 <div class="links-container">
                     <a href="./blogs.html" class="link link-primary">Check out my Blogs</a>
-                    <a target="_blank" href="https://dev.to/dashboard" class="link link-secondary secondary-color">Browse blogs on Dev</a>
+                    <a target="_blank" href="https://dev.to/bharati21" class="link link-secondary secondary-color">Browse blogs on Dev</a>
                     
                 </div>
             </section>
